--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 				<div id="comment">
 					<div class="card mb-2 content" v-for="m in messages">
 						<div class="card-body">
-							<p class="card-text"><span class="badge bg-secondary">{{ m.user }}</span></p>
-							<p class="card-text msg">{{ m.message }}</p>
+							<p class="card-text"><span class="badge bg-secondary" v-html="m.user"></span></p>
+							<p class="card-text msg" v-html="m.message"></p>
 							<p class="card-text" v-if="m.timestamp"><small class="text-muted">{{ m.timestamp }}</small></p>
 						</div>
 					</div>
